# BakcylProgramowania_2020

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.user.6a923fd  Card.cpp  Card.hpp  CardWindow.cpp  CardWindow.h  CardsContainer.cpp  DeckBuilder.cpp  DeckBuilder.hpp  DeckWindow.cpp  DeckWindow.h  External_GTest.cmake  FakeDeck.cpp  LICENSE  Logger.cpp  Logger.hpp  MainWindow.cpp  MainWindow.h  README.md  SearchRequest.cpp  SearchRequest.h  build.bash  cardbutton.cpp  cardbutton.h  cardscontainer.cpp  cardscontainer.h  cardwindow.cpp  cardwindow.h  cardwindow.ui  database.sql  deckwindow.cpp  deckwindow.h  deckwindow.ui  fakedeck.cpp  filedownloader.cpp  filedownloader.h  logger.cpp  main.cpp  mainwindow.cpp  (+4 more)
DeckBuilder/: CMakeLists.txt  Card.cpp  Card.hpp  Deck.hpp  DeckBuilder.cpp  DeckBuilder.hpp  SearchFlags.hpp
DeckBuilder/Include/: Card.hpp  Deck.hpp  DeckBuilder.hpp  IllegalCardExceptions.hpp
DeckBuilder/Source/: Card.cpp  Deck.cpp  DeckBuilder.cpp  IllegalCardExceptions.cpp  main.cpp
Logger/: ExceptionLevels.cpp  Logger  Logger.cpp  Logger.hpp
QT/: CMakeLists.txt
QT/Assets/: resources.qrc
QT/Include/: CardWindow.h  CardsContainer.h  DeckWindow.h  ErrorWindow.h  MainWindow.h
QT/Source/: CardWindow.cpp  CardsContainer.cpp  CardsContainer.cpp.autosave  DeckWindow.cpp  ErrorWindow.cpp  MainWindow.cpp  deckwindow.ui  mainwindow.ui
db/: README.md
db/card_api/: CMakeLists.txt  card_api_example.cpp
db/card_api/Include/: baseCardApi.hpp  searchEngine.hpp  utilities.hpp
db/card_api/Source/: baseCardApi.cpp  searchEngine.cpp  utilities.cpp
db/db_builder/: CMakeLists.txt
db/db_builder/Include/: filedownloader.h  jsonInserter.hpp
db/db_builder/Source/: filedownloader.cpp  jsonInserter.cpp  main.cpp
db/sqlite_helper/: CMakeLists.txt
db/sqlite_helper/Include/: sqlite_helper.hpp
db/sqlite_helper/Source/: sqlite_helper.cpp
db_builder/: CMakeLists.txt
db_builder/Include/: filedownloader.h  jsonInserter.hpp  searchEngine.hpp  sqlite_helper.hpp
db_builder/Source/: filedownloader.cpp  jsonInserter.cpp  main.cpp  searchEngine.cpp  sqlite_helper.cpp
search_func/: CMakeLists.txt
search_func/Include/: search_flags.hpp  search_func.hpp  utils.hpp
search_func/Source/: main.cpp  search_flags.cpp  search_func.cpp  utils.cpp
