if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.11.0")
    file(GLOB SOURCE_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp)
    file(GLOB SOURCE_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.ui)
    file(GLOB SOURCE_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Assets/*.qrc)
else()
    file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp)
    file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.ui)
    file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Assets/*.qrc)
endif()

add_library(QT_LIBS STATIC ${SOURCE_FILES})
target_include_directories(QT_LIBS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
